--- a/reset.html
+++ b/reset.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Reset password — ProfitPilot</title>
+<title>Update password — ProfitPilot</title>
 <meta name="robots" content="noindex,nofollow">
 <link rel="icon" href="https://ukwebtools.com/favicon.svg">
 
@@ -13,17 +13,18 @@
   --bg2:#0f172a;
   --card:#0f172a;
   --txt:#eaf0ff;
-  --muted:#9aa7bd;
+  --muted:rgba(226,232,240,.72);
   --line:rgba(255,255,255,.12);
   --accent:#0ea5a4;
   --accent2:#4f46e5;
   --shadow:0 22px 80px rgba(0,0,0,.55);
+  --ok:rgba(34,197,94,.35);
+  --bad:rgba(239,68,68,.35);
 }
 *{box-sizing:border-box}
-
 body{
   margin:0;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   color:var(--txt);
   background:
     radial-gradient(900px 420px at 20% 0%, rgba(79,70,229,.18), transparent 60%),
@@ -37,7 +38,7 @@ body{
 }
 
 .card{
-  width:min(560px,100%);
+  width:min(560px, 100%);
   background:rgba(15,23,42,.94);
   border:1px solid var(--line);
   border-radius:18px;
@@ -45,17 +46,44 @@ body{
   box-shadow:var(--shadow);
 }
 
+.brand{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:12px;
+  margin-bottom:10px;
+}
+.logo{
+  width:44px;height:44px;
+  border-radius:14px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:1000;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.10);
+}
+.title{
+  font-weight:1000;
+  letter-spacing:-.2px;
+  font-size:16px;
+}
+.sub{
+  margin-top:2px;
+  color:var(--muted);
+  font-size:12px;
+}
+
 h1{
-  margin:0 0 8px;
+  margin:12px 0 8px;
   font-size:22px;
   font-weight:1000;
 }
-
-.sub{
-  margin-bottom:14px;
-  font-size:13px;
+.p{
+  margin:0 0 14px;
   color:var(--muted);
   line-height:1.6;
+  font-size:13px;
 }
 
 label{
@@ -66,9 +94,11 @@ label{
   color:var(--muted);
 }
 
+.field{ position:relative; }
+
 input{
   width:100%;
-  padding:12px 14px;
+  padding:12px 44px 12px 14px;
   border-radius:14px;
   border:1px solid var(--line);
   background:#0b1220;
@@ -79,6 +109,22 @@ input:focus{
   border-color:rgba(14,165,164,.45);
   box-shadow:0 0 0 4px rgba(14,165,164,.14);
 }
+
+.eye{
+  position:absolute;
+  right:8px;
+  top:50%;
+  transform:translateY(-50%);
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(255,255,255,.06);
+  color:rgba(255,255,255,.88);
+  border-radius:12px;
+  padding:8px 10px;
+  font-weight:900;
+  cursor:pointer;
+  font-size:12px;
+}
+.eye:hover{ filter:brightness(1.08); }
 
 .btn{
   width:100%;
@@ -91,11 +137,7 @@ input:focus{
   background:linear-gradient(135deg,var(--accent),var(--accent2));
   color:#fff;
 }
-
-.btn:disabled{
-  opacity:.6;
-  cursor:not-allowed;
-}
+.btn:disabled{ opacity:.6; cursor:not-allowed; }
 
 .msg{
   margin-top:14px;
@@ -107,130 +149,209 @@ input:focus{
   min-height:44px;
   display:flex;
   align-items:center;
+  color:rgba(255,255,255,.88);
 }
-
-.ok{
-  border-color:rgba(34,197,94,.35);
+.msg.ok{
+  border-color:var(--ok);
   background:rgba(34,197,94,.10);
 }
-
-.bad{
-  border-color:rgba(239,68,68,.35);
+.msg.bad{
+  border-color:var(--bad);
   background:rgba(239,68,68,.12);
 }
-
 .small{
   margin-top:12px;
   font-size:12px;
   color:var(--muted);
+  line-height:1.6;
 }
-
-a{color:#5eead4;text-decoration:none;font-weight:900}
-a:hover{text-decoration:underline}
+a{ color:#5eead4; text-decoration:none; font-weight:900; }
+a:hover{ text-decoration:underline; }
+hr{
+  border:0;
+  height:1px;
+  background:rgba(255,255,255,.08);
+  margin:14px 0;
+}
 </style>
 </head>
 
 <body>
-
 <div class="card">
 
-<h1>Reset password</h1>
+  <div class="brand" aria-label="ProfitPilot">
+    <div style="display:flex;gap:12px;align-items:center">
+      <div class="logo" aria-hidden="true">PP</div>
+      <div>
+        <div class="title">ProfitPilot</div>
+        <div class="sub">Update password</div>
+      </div>
+    </div>
+    <a href="login.html" title="Back to login">Login</a>
+  </div>
 
-<div class="sub">
-Enter your account email and we'll send a secure password reset link.
-</div>
+  <h1>Set a new password</h1>
+  <p class="p" id="statusLine">
+    Opening your secure reset session…
+  </p>
 
-<label>Email</label>
-<input id="email" type="email" placeholder="you@example.com">
+  <label for="pw1">New password</label>
+  <div class="field">
+    <input id="pw1" type="password" placeholder="Minimum 8 characters" autocomplete="new-password">
+    <button class="eye" id="toggle1" type="button">Show</button>
+  </div>
 
-<button class="btn" id="sendBtn">Send reset email</button>
+  <label for="pw2">Confirm new password</label>
+  <div class="field">
+    <input id="pw2" type="password" placeholder="Repeat password" autocomplete="new-password">
+    <button class="eye" id="toggle2" type="button">Show</button>
+  </div>
 
-<div class="msg" id="msg">—</div>
+  <button class="btn" id="saveBtn" disabled>Update password</button>
 
-<div class="small">
-Remembered your password?
-<a href="login.html">Back to login</a>
-</div>
+  <div class="msg" id="msg">—</div>
+
+  <hr>
+
+  <div class="small">
+    If this page says the link is invalid or expired, go back to
+    <a href="reset.html">Reset</a> and request a new link.
+  </div>
 
 </div>
 
 <script type="module">
-import { createClient }
-from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
-const SUPABASE_URL =
-"https://xsigsftvfknefpdfsyae.supabase.co";
+const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
+const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg"; // ✅ replace with your anon key
 
-const SUPABASE_ANON =
-"YOUR_ANON_KEY_HERE";   // ✅ keep your anon key
-
-/* ===== SAME AUTH CONFIG AS APP ===== */
-const supabase = createClient(
-  SUPABASE_URL,
-  SUPABASE_ANON,
-  {
-    auth:{
-      persistSession:true,
-      autoRefreshToken:true,
-      detectSessionInUrl:true,
-      flowType:"pkce",
-      storageKey:"profitpilot_auth"
-    }
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON, {
+  auth:{
+    persistSession:true,
+    autoRefreshToken:true,
+    detectSessionInUrl:true,
+    flowType:"pkce",
+    storageKey:"profitpilot_auth"
   }
-);
-
-const emailEl=document.getElementById("email");
-const btn=document.getElementById("sendBtn");
-const msg=document.getElementById("msg");
-
-function setMsg(text,type=""){
-  msg.textContent=text;
-  msg.className="msg "+type;
-}
-
-async function sendReset(){
-
-  const email=emailEl.value.trim();
-
-  if(!email){
-    setMsg("Please enter your email.","bad");
-    return;
-  }
-
-  btn.disabled=true;
-  setMsg("Sending reset email…");
-
-  const { error } =
-  await supabase.auth.resetPasswordForEmail(
-    email,
-    {
-      redirectTo:
-      location.origin + "/update-password.html"
-    }
-  );
-
-  btn.disabled=false;
-
-  if(error){
-    console.error(error);
-    setMsg(
-      "Could not send reset email. Try again shortly.",
-      "bad"
-    );
-    return;
-  }
-
-  setMsg(
-    "Reset email sent ✅ Check inbox + spam folder.",
-    "ok"
-  );
-}
-
-btn.addEventListener("click",sendReset);
-
-emailEl.addEventListener("keydown",e=>{
-  if(e.key==="Enter") sendReset();
 });
+
+const pw1 = document.getElementById("pw1");
+const pw2 = document.getElementById("pw2");
+const saveBtn = document.getElementById("saveBtn");
+const msg = document.getElementById("msg");
+const statusLine = document.getElementById("statusLine");
+
+function setMsg(text, type=""){
+  msg.textContent = text || "—";
+  msg.className = "msg " + (type || "");
+}
+
+function setLoading(on){
+  saveBtn.disabled = on || !canSubmit();
+  saveBtn.textContent = on ? "Updating…" : "Update password";
+}
+
+function canSubmit(){
+  const a = (pw1.value || "").trim();
+  const b = (pw2.value || "").trim();
+  return a.length >= 8 && a === b;
+}
+
+function bindToggle(btnId, input){
+  const btn = document.getElementById(btnId);
+  btn.addEventListener("click", ()=>{
+    const isPw = input.type === "password";
+    input.type = isPw ? "text" : "password";
+    btn.textContent = isPw ? "Hide" : "Show";
+    input.focus();
+  });
+}
+
+bindToggle("toggle1", pw1);
+bindToggle("toggle2", pw2);
+
+[pw1, pw2].forEach(el=>{
+  el.addEventListener("input", ()=>{
+    saveBtn.disabled = !canSubmit();
+    if (!pw1.value || pw1.value.length < 8){
+      setMsg("Password must be at least 8 characters.", "bad");
+    } else if (pw1.value !== pw2.value){
+      setMsg("Passwords must match.", "bad");
+    } else {
+      setMsg("Looks good. Click “Update password”.", "ok");
+    }
+  });
+});
+
+async function bootstrapResetSession(){
+  // Supabase will parse the token from URL if detectSessionInUrl=true.
+  // We just need to confirm a session exists.
+  try{
+    const { data: { session }, error } = await supabase.auth.getSession();
+
+    if (error){
+      console.error(error);
+      statusLine.textContent = "This reset link may be invalid or expired.";
+      setMsg("Link invalid/expired. Please request a new reset email.", "bad");
+      return;
+    }
+
+    if (!session){
+      // Sometimes it needs a moment to hydrate after redirect.
+      await new Promise(r=>setTimeout(r, 500));
+      const { data: s2 } = await supabase.auth.getSession();
+      if (!s2?.session){
+        statusLine.textContent = "This reset link may be invalid or expired.";
+        setMsg("No reset session detected. Please request a new reset email.", "bad");
+        return;
+      }
+    }
+
+    statusLine.textContent = "Enter a new password and save it.";
+    setMsg("Ready.", "");
+  } catch(e){
+    console.error(e);
+    statusLine.textContent = "This reset link may be invalid or expired.";
+    setMsg("Unexpected error. Please request a new reset email.", "bad");
+  }
+}
+
+saveBtn.addEventListener("click", async ()=>{
+  const a = (pw1.value || "").trim();
+  const b = (pw2.value || "").trim();
+
+  if (a.length < 8){
+    setMsg("Password must be at least 8 characters.", "bad");
+    return;
+  }
+  if (a !== b){
+    setMsg("Passwords must match.", "bad");
+    return;
+  }
+
+  setLoading(true);
+  setMsg("Updating password…");
+
+  const { error } = await supabase.auth.updateUser({ password: a });
+
+  setLoading(false);
+
+  if (error){
+    console.error(error);
+    setMsg("Could not update password. Please request a new reset email and try again.", "bad");
+    return;
+  }
+
+  setMsg("Password updated ✅ Redirecting to login…", "ok");
+
+  // IMPORTANT: sign out so they login with the new password cleanly
+  await supabase.auth.signOut();
+
+  setTimeout(()=> location.replace("login.html"), 900);
+});
+
+bootstrapResetSession();
 </script>
 
 </body>
