--- a/reset.html
+++ b/reset.html
@@ -1,358 +1,263 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="midnight">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Update password — ProfitPilot</title>
-<meta name="robots" content="noindex,nofollow">
-<link rel="icon" href="https://ukwebtools.com/favicon.svg">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Reset password — ProfitPilot</title>
+  <meta name="robots" content="noindex,nofollow">
+  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
-<style>
-:root{
-  --bg:#0b1220;
-  --bg2:#0f172a;
-  --card:#0f172a;
-  --txt:#eaf0ff;
-  --muted:rgba(226,232,240,.72);
-  --line:rgba(255,255,255,.12);
-  --accent:#0ea5a4;
-  --accent2:#4f46e5;
-  --shadow:0 22px 80px rgba(0,0,0,.55);
-  --ok:rgba(34,197,94,.35);
-  --bad:rgba(239,68,68,.35);
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  color:var(--txt);
-  background:
-    radial-gradient(900px 420px at 20% 0%, rgba(79,70,229,.18), transparent 60%),
-    radial-gradient(900px 420px at 80% 0%, rgba(14,165,164,.18), transparent 60%),
-    linear-gradient(180deg,var(--bg2),var(--bg));
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  padding:24px;
-}
+  <style>
+    :root{
+      --bg:#0b1220; --bg2:#0f172a;
+      --txt:#eaf0ff; --muted:rgba(226,232,240,.72);
+      --card:rgba(15,23,42,.86); --cardSolid:#0f172a;
+      --line:rgba(255,255,255,.12); --line2:rgba(255,255,255,.10);
+      --accent:#0ea5a4; --accent2:#4f46e5;
+      --shadow:0 14px 44px rgba(0,0,0,.40);
+      --shadow2:0 26px 90px rgba(0,0,0,.55);
+      --ring:rgba(14,165,164,.45);
+      --inputBg:rgba(2,6,23,.55);
+      --radius:20px;
+    }
+    :root[data-theme="day"]{
+      --bg:#f6f8fb; --bg2:#eef2ff;
+      --txt:#0b1220; --muted:#556072;
+      --card:rgba(255,255,255,.86); --cardSolid:#ffffff;
+      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.08);
+      --shadow:0 14px 44px rgba(15,23,42,.10);
+      --shadow2:0 26px 90px rgba(15,23,42,.12);
+      --ring:rgba(79,70,229,.35);
+      --inputBg:#ffffff;
+    }
+    :root[data-theme="soft"]{
+      --bg:#fbfbff; --bg2:#f3f4ff;
+      --txt:#0b1220; --muted:#596276;
+      --card:rgba(255,255,255,.90); --cardSolid:#ffffff;
+      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.09);
+      --shadow:0 14px 44px rgba(15,23,42,.10);
+      --shadow2:0 26px 90px rgba(15,23,42,.12);
+      --ring:rgba(14,165,164,.30);
+      --inputBg:#ffffff;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--txt);
+      background:
+        radial-gradient(900px 520px at 20% -10%, rgba(79,70,229,.14), transparent 60%),
+        radial-gradient(900px 520px at 80% -10%, rgba(14,165,164,.14), transparent 60%),
+        linear-gradient(180deg,var(--bg2),var(--bg));
+      min-height:100vh;
+    }
+    a{color:var(--accent);text-decoration:none;font-weight:900}
+    a:hover{text-decoration:underline}
+    :focus-visible{outline:3px solid var(--ring);outline-offset:3px;border-radius:12px}
 
-.card{
-  width:min(560px, 100%);
-  background:rgba(15,23,42,.94);
-  border:1px solid var(--line);
-  border-radius:18px;
-  padding:24px;
-  box-shadow:var(--shadow);
-}
+    .wrap{max-width:1120px;margin:0 auto;padding:0 18px}
+    header{padding:16px 0}
+    .nav{background:var(--card);border:1px solid var(--line);border-radius:0 0 22px 22px;backdrop-filter:blur(14px);box-shadow:var(--shadow);overflow:hidden}
+    .navInner{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;padding:12px 14px}
+    .brand{display:flex;align-items:center;gap:12px;min-width:220px}
+    .logo{
+      width:42px;height:42px;border-radius:14px;
+      display:flex;align-items:center;justify-content:center;
+      font-weight:1000;letter-spacing:-.5px;
+      border:1px solid var(--line2);
+      background:rgba(255,255,255,.06);
+    }
+    :root[data-theme="day"] .logo, :root[data-theme="soft"] .logo{background:rgba(15,23,42,.03)}
+    .bt{display:flex;flex-direction:column;line-height:1.1}
+    .t1{font-weight:1000;font-size:15px;letter-spacing:-.2px}
+    .t2{font-size:12px;color:var(--muted);margin-top:2px}
+    .right{display:flex;align-items:center;gap:10px;flex-wrap:wrap;justify-content:flex-end}
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;gap:8px;
+      padding:10px 14px;border-radius:999px;
+      border:1px solid var(--line);
+      background:var(--inputBg);
+      color:var(--txt);
+      font-weight:950;
+      cursor:pointer;
+      text-decoration:none;
+      white-space:nowrap;
+    }
+    .btn.primary{border-color:transparent;background:linear-gradient(135deg,var(--accent),rgba(79,70,229,.92));color:#fff}
+    .select{
+      appearance:none;
+      padding:10px 40px 10px 14px;border-radius:999px;
+      border:1px solid var(--line);
+      background:var(--inputBg);
+      color:var(--txt);font-weight:950;cursor:pointer;
+      background-image:
+        linear-gradient(45deg, transparent 50%, currentColor 50%),
+        linear-gradient(135deg, currentColor 50%, transparent 50%);
+      background-position:
+        calc(100% - 18px) calc(50% - 3px),
+        calc(100% - 13px) calc(50% - 3px);
+      background-size:5px 5px, 5px 5px;
+      background-repeat:no-repeat;
+      max-width:220px;
+    }
 
-.brand{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  gap:12px;
-  margin-bottom:10px;
-}
-.logo{
-  width:44px;height:44px;
-  border-radius:14px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:1000;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.10);
-}
-.title{
-  font-weight:1000;
-  letter-spacing:-.2px;
-  font-size:16px;
-}
-.sub{
-  margin-top:2px;
-  color:var(--muted);
-  font-size:12px;
-}
-
-h1{
-  margin:12px 0 8px;
-  font-size:22px;
-  font-weight:1000;
-}
-.p{
-  margin:0 0 14px;
-  color:var(--muted);
-  line-height:1.6;
-  font-size:13px;
-}
-
-label{
-  display:block;
-  margin:12px 0 6px;
-  font-size:12px;
-  font-weight:900;
-  color:var(--muted);
-}
-
-.field{ position:relative; }
-
-input{
-  width:100%;
-  padding:12px 44px 12px 14px;
-  border-radius:14px;
-  border:1px solid var(--line);
-  background:#0b1220;
-  color:var(--txt);
-  outline:none;
-}
-input:focus{
-  border-color:rgba(14,165,164,.45);
-  box-shadow:0 0 0 4px rgba(14,165,164,.14);
-}
-
-.eye{
-  position:absolute;
-  right:8px;
-  top:50%;
-  transform:translateY(-50%);
-  border:1px solid rgba(255,255,255,.12);
-  background:rgba(255,255,255,.06);
-  color:rgba(255,255,255,.88);
-  border-radius:12px;
-  padding:8px 10px;
-  font-weight:900;
-  cursor:pointer;
-  font-size:12px;
-}
-.eye:hover{ filter:brightness(1.08); }
-
-.btn{
-  width:100%;
-  margin-top:16px;
-  padding:13px;
-  border-radius:999px;
-  border:none;
-  font-weight:1000;
-  cursor:pointer;
-  background:linear-gradient(135deg,var(--accent),var(--accent2));
-  color:#fff;
-}
-.btn:disabled{ opacity:.6; cursor:not-allowed; }
-
-.msg{
-  margin-top:14px;
-  padding:10px 12px;
-  border-radius:14px;
-  border:1px solid rgba(255,255,255,.10);
-  background:rgba(255,255,255,.04);
-  font-size:13px;
-  min-height:44px;
-  display:flex;
-  align-items:center;
-  color:rgba(255,255,255,.88);
-}
-.msg.ok{
-  border-color:var(--ok);
-  background:rgba(34,197,94,.10);
-}
-.msg.bad{
-  border-color:var(--bad);
-  background:rgba(239,68,68,.12);
-}
-.small{
-  margin-top:12px;
-  font-size:12px;
-  color:var(--muted);
-  line-height:1.6;
-}
-a{ color:#5eead4; text-decoration:none; font-weight:900; }
-a:hover{ text-decoration:underline; }
-hr{
-  border:0;
-  height:1px;
-  background:rgba(255,255,255,.08);
-  margin:14px 0;
-}
-</style>
+    main{padding:22px 0 78px}
+    .grid{display:grid;place-items:center}
+    .card{
+      width:min(640px,100%);
+      background:var(--card);
+      border:1px solid var(--line);
+      border-radius:var(--radius);
+      backdrop-filter:blur(14px);
+      box-shadow:var(--shadow2);
+      padding:22px;
+    }
+    h1{margin:0 0 8px;font-size:22px;font-weight:1000;letter-spacing:-.3px}
+    .lead{margin:0 0 16px;color:var(--muted);line-height:1.6;font-size:13.5px}
+    label{display:block;margin:12px 0 6px;font-size:13px;font-weight:1000}
+    input{
+      width:100%;
+      padding:12px 14px;
+      border-radius:14px;
+      border:1px solid var(--line);
+      background:var(--inputBg);
+      color:var(--txt);
+      font-size:15px;
+      outline:none;
+    }
+    input:focus{border-color:rgba(14,165,164,.42);box-shadow:0 0 0 4px rgba(14,165,164,.12)}
+    .msg{
+      margin-top:12px;
+      min-height:44px;
+      padding:10px 12px;
+      border-radius:14px;
+      border:1px solid var(--line2);
+      background:rgba(255,255,255,.04);
+      color:var(--muted);
+      display:flex;align-items:center;
+      font-size:12.8px;line-height:1.55;
+      word-break:break-word;
+    }
+    .msg.ok{border-color:rgba(14,165,164,.32);background:rgba(14,165,164,.08);color:var(--txt)}
+    .msg.bad{border-color:rgba(239,68,68,.30);background:rgba(239,68,68,.08);color:var(--txt)}
+  </style>
 </head>
 
 <body>
-<div class="card">
-
-  <div class="brand" aria-label="ProfitPilot">
-    <div style="display:flex;gap:12px;align-items:center">
-      <div class="logo" aria-hidden="true">PP</div>
-      <div>
-        <div class="title">ProfitPilot</div>
-        <div class="sub">Update password</div>
+<header>
+  <div class="wrap">
+    <div class="nav">
+      <div class="navInner">
+        <div class="brand">
+          <div class="logo" aria-hidden="true">PP</div>
+          <div class="bt">
+            <div class="t1">ProfitPilot</div>
+            <div class="t2">Reset password</div>
+          </div>
+        </div>
+        <div class="right">
+          <a class="btn" href="login.html">Back to login</a>
+          <a class="btn" href="signup.html">Sign up</a>
+          <select class="select" id="themeSel" aria-label="Theme">
+            <option value="day">Day</option>
+            <option value="soft">Soft</option>
+            <option value="midnight">Midnight</option>
+          </select>
+        </div>
       </div>
     </div>
-    <a href="login.html" title="Back to login">Login</a>
   </div>
+</header>
 
-  <h1>Set a new password</h1>
-  <p class="p" id="statusLine">
-    Opening your secure reset session…
-  </p>
+<main class="wrap">
+  <div class="grid">
+    <div class="card">
+      <h1>Reset your password</h1>
+      <p class="lead">Enter your email and we’ll send you a secure reset link.</p>
 
-  <label for="pw1">New password</label>
-  <div class="field">
-    <input id="pw1" type="password" placeholder="Minimum 8 characters" autocomplete="new-password">
-    <button class="eye" id="toggle1" type="button">Show</button>
+      <label for="email">Email</label>
+      <input id="email" type="email" placeholder="you@example.com" autocomplete="email" inputmode="email" required>
+
+      <button class="btn primary" id="sendBtn" type="button" style="width:100%;margin-top:12px">Send reset link</button>
+
+      <div class="msg" id="msg" role="status" aria-live="polite">—</div>
+    </div>
   </div>
-
-  <label for="pw2">Confirm new password</label>
-  <div class="field">
-    <input id="pw2" type="password" placeholder="Repeat password" autocomplete="new-password">
-    <button class="eye" id="toggle2" type="button">Show</button>
-  </div>
-
-  <button class="btn" id="saveBtn" disabled>Update password</button>
-
-  <div class="msg" id="msg">—</div>
-
-  <hr>
-
-  <div class="small">
-    If this page says the link is invalid or expired, go back to
-    <a href="reset.html">Reset</a> and request a new link.
-  </div>
-
-</div>
+</main>
 
 <script type="module">
-import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
-const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
-const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg"; // ✅ replace with your anon key
+  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
+  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
 
-const supabase = createClient(SUPABASE_URL, SUPABASE_ANON, {
-  auth:{
-    persistSession:true,
-    autoRefreshToken:true,
-    detectSessionInUrl:true,
-    flowType:"pkce",
-    storageKey:"profitpilot_auth"
-  }
-});
-
-const pw1 = document.getElementById("pw1");
-const pw2 = document.getElementById("pw2");
-const saveBtn = document.getElementById("saveBtn");
-const msg = document.getElementById("msg");
-const statusLine = document.getElementById("statusLine");
-
-function setMsg(text, type=""){
-  msg.textContent = text || "—";
-  msg.className = "msg " + (type || "");
-}
-
-function setLoading(on){
-  saveBtn.disabled = on || !canSubmit();
-  saveBtn.textContent = on ? "Updating…" : "Update password";
-}
-
-function canSubmit(){
-  const a = (pw1.value || "").trim();
-  const b = (pw2.value || "").trim();
-  return a.length >= 8 && a === b;
-}
-
-function bindToggle(btnId, input){
-  const btn = document.getElementById(btnId);
-  btn.addEventListener("click", ()=>{
-    const isPw = input.type === "password";
-    input.type = isPw ? "text" : "password";
-    btn.textContent = isPw ? "Hide" : "Show";
-    input.focus();
-  });
-}
-
-bindToggle("toggle1", pw1);
-bindToggle("toggle2", pw2);
-
-[pw1, pw2].forEach(el=>{
-  el.addEventListener("input", ()=>{
-    saveBtn.disabled = !canSubmit();
-    if (!pw1.value || pw1.value.length < 8){
-      setMsg("Password must be at least 8 characters.", "bad");
-    } else if (pw1.value !== pw2.value){
-      setMsg("Passwords must match.", "bad");
-    } else {
-      setMsg("Looks good. Click “Update password”.", "ok");
+  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON, {
+    auth: {
+      persistSession: true,
+      autoRefreshToken: true,
+      detectSessionInUrl: true,
+      flowType: "pkce",
+      storageKey: "profitpilot_auth"
     }
   });
-});
 
-async function bootstrapResetSession(){
-  // Supabase will parse the token from URL if detectSessionInUrl=true.
-  // We just need to confirm a session exists.
-  try{
-    const { data: { session }, error } = await supabase.auth.getSession();
+  // Theme
+  const themeSel = document.getElementById("themeSel");
+  function setTheme(t){
+    document.documentElement.setAttribute("data-theme", t);
+    try{ localStorage.setItem("pp_theme", t); }catch(e){}
+  }
+  (function initTheme(){
+    const saved = localStorage.getItem("pp_theme") || "midnight";
+    setTheme(saved);
+    themeSel.value = saved;
+  })();
+  themeSel.addEventListener("change", ()=> setTheme(themeSel.value));
 
+  const emailEl = document.getElementById("email");
+  const sendBtn = document.getElementById("sendBtn");
+  const msg = document.getElementById("msg");
+
+  function setMsg(text, kind=""){
+    msg.textContent = text || "—";
+    msg.className = "msg" + (kind ? " " + kind : "");
+  }
+  function setLoading(on){
+    sendBtn.disabled = !!on;
+    sendBtn.textContent = on ? "Sending…" : "Send reset link";
+  }
+  function looksLikeEmail(v){
+    return v.includes("@") && v.includes(".") && v.length >= 6;
+  }
+
+  sendBtn.addEventListener("click", async ()=>{
+    const email = emailEl.value.trim();
+    if (!email){ setMsg("Please enter your email.", "bad"); emailEl.focus(); return; }
+    if (!looksLikeEmail(email)){ setMsg("Please enter a valid email address.", "bad"); emailEl.focus(); return; }
+
+    setLoading(true);
+    setMsg("Sending reset email…");
+
+    const { error } = await supabase.auth.resetPasswordForEmail(email, {
+      redirectTo: `${location.origin}/update-password.html`
+    });
+
+    setLoading(false);
+
+    // We intentionally don’t reveal whether an account exists.
     if (error){
       console.error(error);
-      statusLine.textContent = "This reset link may be invalid or expired.";
-      setMsg("Link invalid/expired. Please request a new reset email.", "bad");
+      const low = String(error.message || "").toLowerCase();
+      if (low.includes("rate") || low.includes("too many")) {
+        setMsg("Too many attempts. Please wait a moment and try again.", "bad");
+      } else {
+        setMsg("If an account exists for that email, a reset link has been sent. Check Inbox + Spam/Junk.", "ok");
+      }
       return;
     }
 
-    if (!session){
-      // Sometimes it needs a moment to hydrate after redirect.
-      await new Promise(r=>setTimeout(r, 500));
-      const { data: s2 } = await supabase.auth.getSession();
-      if (!s2?.session){
-        statusLine.textContent = "This reset link may be invalid or expired.";
-        setMsg("No reset session detected. Please request a new reset email.", "bad");
-        return;
-      }
-    }
-
-    statusLine.textContent = "Enter a new password and save it.";
-    setMsg("Ready.", "");
-  } catch(e){
-    console.error(e);
-    statusLine.textContent = "This reset link may be invalid or expired.";
-    setMsg("Unexpected error. Please request a new reset email.", "bad");
-  }
-}
-
-saveBtn.addEventListener("click", async ()=>{
-  const a = (pw1.value || "").trim();
-  const b = (pw2.value || "").trim();
-
-  if (a.length < 8){
-    setMsg("Password must be at least 8 characters.", "bad");
-    return;
-  }
-  if (a !== b){
-    setMsg("Passwords must match.", "bad");
-    return;
-  }
-
-  setLoading(true);
-  setMsg("Updating password…");
-
-  const { error } = await supabase.auth.updateUser({ password: a });
-
-  setLoading(false);
-
-  if (error){
-    console.error(error);
-    setMsg("Could not update password. Please request a new reset email and try again.", "bad");
-    return;
-  }
-
-  setMsg("Password updated ✅ Redirecting to login…", "ok");
-
-  // IMPORTANT: sign out so they login with the new password cleanly
-  await supabase.auth.signOut();
-
-  setTimeout(()=> location.replace("login.html"), 900);
-});
-
-bootstrapResetSession();
+    setMsg("If an account exists for that email, a reset link has been sent. Check Inbox + Spam/Junk.", "ok");
+  });
 </script>
-
 </body>
 </html>
