--- a/update-password.html
+++ b/update-password.html
@@ -9,92 +9,59 @@
 
   <style>
     :root{
-      --bg:#0b1220; --bg2:#0f172a;
-      --txt:#eaf0ff; --muted:rgba(226,232,240,.72);
-      --card:rgba(15,23,42,.88);
-      --line:rgba(255,255,255,.12); --line2:rgba(255,255,255,.10);
-      --accent:#0ea5a4; --accent2:#4f46e5;
-      --shadow2:0 26px 90px rgba(0,0,0,.55);
-      --ring:rgba(14,165,164,.45);
-      --inputBg:rgba(2,6,23,.55);
-      --radius:20px;
+      --bg:#070b12; --bg2:#0a1020; --card:#0c1426; --card2:#0a1222;
+      --txt:#eaf0ff; --muted:rgba(234,240,255,.70);
+      --line:rgba(255,255,255,.10); --line2:rgba(255,255,255,.08);
+      --accent:#5eead4; --accent2:#60a5fa;
+      --shadow2:0 24px 90px rgba(0,0,0,.55);
+      --ring:rgba(96,165,250,.55);
+      --ok:rgba(52,211,153,.28);
+      --bad:rgba(251,113,133,.28);
     }
     :root[data-theme="day"]{
-      --bg:#f6f8fb; --bg2:#eef2ff;
-      --txt:#0b1220; --muted:#556072;
-      --card:rgba(255,255,255,.90);
-      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.08);
-      --shadow2:0 26px 90px rgba(15,23,42,.12);
-      --ring:rgba(79,70,229,.35);
-      --inputBg:#ffffff;
+      --bg:#f6f8fb; --bg2:#eef2ff; --card:#fff; --card2:#fff;
+      --txt:#0b1220; --muted:rgba(11,18,32,.65);
+      --line:rgba(16,24,40,.10); --line2:rgba(16,24,40,.08);
+      --shadow2:0 24px 90px rgba(16,24,40,.12);
+      --ring:rgba(79,70,229,.40);
+      --ok:rgba(34,197,94,.22);
+      --bad:rgba(239,68,68,.22);
     }
     :root[data-theme="soft"]{
-      --bg:#fbfbff; --bg2:#f3f4ff;
-      --txt:#0b1220; --muted:#596276;
-      --card:rgba(255,255,255,.92);
-      --line:rgba(15,23,42,.12); --line2:rgba(15,23,42,.09);
-      --shadow2:0 26px 90px rgba(15,23,42,.12);
-      --ring:rgba(14,165,164,.30);
-      --inputBg:#ffffff;
+      --bg:#fbfbff; --bg2:#f3f4ff; --card:#fff; --card2:#fff;
+      --txt:#0b1220; --muted:rgba(11,18,32,.65);
+      --line:rgba(16,24,40,.11); --line2:rgba(16,24,40,.08);
+      --shadow2:0 24px 90px rgba(16,24,40,.12);
+      --ring:rgba(94,234,212,.35);
+      --ok:rgba(34,197,94,.22);
+      --bad:rgba(239,68,68,.22);
     }
+
     *{box-sizing:border-box}
     body{
       margin:0;
-      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       color:var(--txt);
       background:
-        radial-gradient(900px 520px at 20% -10%, rgba(79,70,229,.14), transparent 60%),
-        radial-gradient(900px 520px at 80% -10%, rgba(14,165,164,.14), transparent 60%),
-        linear-gradient(180deg,var(--bg2),var(--bg));
+        radial-gradient(900px 520px at 20% -10%, rgba(94,234,212,.10), transparent 55%),
+        radial-gradient(900px 520px at 80% -10%, rgba(96,165,250,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg2), var(--bg));
       min-height:100vh;
-      display:grid;
-      place-items:center;
-      padding:24px;
     }
-    a{color:var(--accent);text-decoration:none;font-weight:900}
+    a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     :focus-visible{outline:3px solid var(--ring);outline-offset:3px;border-radius:12px}
 
+    .wrap{max-width:560px;margin:54px auto 70px;padding:0 16px}
     .card{
-      width:min(560px,100%);
-      background:var(--card);
+      background:linear-gradient(180deg, rgba(94,234,212,.10), transparent 60%), var(--card);
       border:1px solid var(--line);
-      border-radius:var(--radius);
-      backdrop-filter:blur(14px);
-      box-shadow:var(--shadow2);
+      border-radius:18px;
       padding:22px;
+      box-shadow:var(--shadow2);
     }
-    .top{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{
-      width:42px;height:42px;border-radius:14px;
-      display:flex;align-items:center;justify-content:center;
-      font-weight:1000;letter-spacing:-.5px;
-      border:1px solid var(--line2);
-      background:rgba(255,255,255,.06);
-    }
-    :root[data-theme="day"] .logo, :root[data-theme="soft"] .logo{background:rgba(15,23,42,.03)}
-    .t1{font-weight:1000;font-size:15px;letter-spacing:-.2px}
-    .t2{font-size:12px;color:var(--muted);margin-top:2px}
-    .select{
-      appearance:none;
-      padding:10px 40px 10px 14px;border-radius:999px;
-      border:1px solid var(--line);
-      background:var(--inputBg);
-      color:var(--txt);font-weight:950;cursor:pointer;
-      background-image:
-        linear-gradient(45deg, transparent 50%, currentColor 50%),
-        linear-gradient(135deg, currentColor 50%, transparent 50%);
-      background-position:
-        calc(100% - 18px) calc(50% - 3px),
-        calc(100% - 13px) calc(50% - 3px);
-      background-size:5px 5px, 5px 5px;
-      background-repeat:no-repeat;
-      max-width:220px;
-    }
-
-    h1{margin:14px 0 8px;font-size:22px;font-weight:1000;letter-spacing:-.3px}
-    .lead{margin:0 0 12px;color:var(--muted);line-height:1.6;font-size:13.5px}
+    h1{margin:0 0 8px;font-size:22px;letter-spacing:-.02em}
+    .subtitle{margin:0 0 14px;color:var(--muted);font-size:13px;line-height:1.6}
 
     .hint{
       margin-top:10px;
@@ -103,110 +70,105 @@
       border:1px solid var(--line2);
       background:rgba(255,255,255,.04);
       color:var(--muted);
-      font-size:12.8px;
-      line-height:1.55;
+      font-size:12.5px;
+      line-height:1.6;
     }
-    .hint.ok{border-color:rgba(14,165,164,.32);background:rgba(14,165,164,.08);color:var(--txt)}
-    .hint.bad{border-color:rgba(239,68,68,.30);background:rgba(239,68,68,.08);color:var(--txt)}
+    .hint.ok{border-color:var(--ok);background:rgba(52,211,153,.08);color:var(--txt)}
+    .hint.bad{border-color:var(--bad);background:rgba(251,113,133,.08);color:var(--txt)}
 
-    label{display:block;margin:12px 0 6px;font-size:13px;font-weight:1000}
+    label{font-size:12px;color:var(--muted);margin-top:14px;display:block;font-weight:900}
     .field{position:relative}
     input{
       width:100%;
-      padding:12px 44px 12px 14px;
+      margin-top:8px;
+      padding:12px 44px 12px 12px;
       border-radius:14px;
       border:1px solid var(--line);
-      background:var(--inputBg);
+      background:var(--card2);
       color:var(--txt);
-      font-size:15px;
       outline:none;
+      font-size:15px;
     }
-    input:focus{border-color:rgba(14,165,164,.42);box-shadow:0 0 0 4px rgba(14,165,164,.12)}
-    .eye{
-      position:absolute;right:8px;top:50%;transform:translateY(-50%);
-      border:1px solid var(--line);
+    :root[data-theme="day"] input,
+    :root[data-theme="soft"] input{ background:#fff; }
+    input:focus{border-color:rgba(94,234,212,.35);box-shadow:0 0 0 4px rgba(94,234,212,.10)}
+    .iconbtn{
+      position:absolute;right:8px;top:50%;
+      transform:translateY(-50%);
+      border:1px solid var(--line2);
       background:rgba(255,255,255,.06);
       color:var(--txt);
       border-radius:12px;
       padding:8px 10px;
-      font-weight:950;
       cursor:pointer;
+      font-weight:900;
       font-size:12px;
     }
+
     .btn{
-      display:inline-flex;align-items:center;justify-content:center;
       width:100%;
-      padding:12px 14px;
-      border-radius:999px;
-      border:1px solid transparent;
-      background:linear-gradient(135deg,var(--accent),rgba(79,70,229,.92));
-      color:#fff;
-      font-weight:1000;
-      cursor:pointer;
       margin-top:14px;
+      padding:12px;
+      border-radius:999px;
+      border:none;
+      cursor:pointer;
+      font-weight:1000;
+      color:#061018;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      box-shadow:0 14px 28px rgba(96,165,250,.18);
+      transition:transform .08s ease, filter .15s ease, opacity .15s ease;
     }
-    .btn:disabled{opacity:.6;cursor:not-allowed}
+    .btn:hover{transform:translateY(-1px);filter:brightness(1.02)}
+    .btn:active{transform:translateY(0)}
+    .btn:disabled{opacity:.6;cursor:not-allowed;transform:none;filter:none}
+
     .msg{
       margin-top:12px;
-      min-height:44px;
+      font-size:12.5px;
+      line-height:1.6;
+      color:var(--muted);
       padding:10px 12px;
       border-radius:14px;
       border:1px solid var(--line2);
       background:rgba(255,255,255,.04);
-      color:var(--muted);
+      min-height:44px;
       display:flex;align-items:center;
-      font-size:12.8px;line-height:1.55;
       word-break:break-word;
     }
-    .msg.ok{border-color:rgba(14,165,164,.32);background:rgba(14,165,164,.08);color:var(--txt)}
-    .msg.bad{border-color:rgba(239,68,68,.30);background:rgba(239,68,68,.08);color:var(--txt)}
+    .msg.ok{border-color:var(--ok);background:rgba(52,211,153,.08);color:var(--txt)}
+    .msg.bad{border-color:var(--bad);background:rgba(251,113,133,.08);color:var(--txt)}
   </style>
 </head>
 
 <body>
-  <div class="card">
-    <div class="top">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">PP</div>
-        <div>
-          <div class="t1">ProfitPilot</div>
-          <div class="t2">Update password</div>
-        </div>
+  <div class="wrap">
+    <div class="card">
+      <h1>Set a new password</h1>
+      <p class="subtitle">
+        This page opens from your reset email. If it says expired, request a new link from <a href="reset.html">Reset</a>.
+      </p>
+
+      <div class="hint" id="hint">Validating your reset session…</div>
+
+      <label for="pw1">New password</label>
+      <div class="field">
+        <input id="pw1" type="password" placeholder="Minimum 8 characters" autocomplete="new-password">
+        <button class="iconbtn" id="toggle1" type="button">Show</button>
       </div>
 
-      <div style="display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end">
-        <a href="login.html" style="font-weight:950">Login</a>
-        <select class="select" id="themeSel" aria-label="Theme">
-          <option value="day">Day</option>
-          <option value="soft">Soft</option>
-          <option value="midnight">Midnight</option>
-        </select>
+      <label for="pw2">Confirm new password</label>
+      <div class="field">
+        <input id="pw2" type="password" placeholder="Repeat password" autocomplete="new-password">
+        <button class="iconbtn" id="toggle2" type="button">Show</button>
       </div>
-    </div>
 
-    <h1>Set a new password</h1>
-    <p class="lead">This page opens from your reset email link. If it expired, request a new one.</p>
+      <button class="btn" id="saveBtn" disabled>Update password</button>
 
-    <div class="hint" id="hint">Opening secure reset session…</div>
+      <div class="msg" id="msg" role="status" aria-live="polite">—</div>
 
-    <label for="pw1">New password</label>
-    <div class="field">
-      <input id="pw1" type="password" autocomplete="new-password" placeholder="Minimum 8 characters">
-      <button class="eye" id="eye1" type="button">Show</button>
-    </div>
-
-    <label for="pw2">Confirm new password</label>
-    <div class="field">
-      <input id="pw2" type="password" autocomplete="new-password" placeholder="Repeat password">
-      <button class="eye" id="eye2" type="button">Show</button>
-    </div>
-
-    <button class="btn" id="saveBtn" type="button" disabled>Update password</button>
-
-    <div class="msg" id="msg" role="status" aria-live="polite">—</div>
-
-    <div style="margin-top:12px;color:var(--muted);font-size:12.5px;line-height:1.6">
-      Link invalid? Go back to <a href="reset.html">Reset password</a>.
+      <div style="margin-top:12px;font-size:12.5px;color:var(--muted);line-height:1.6">
+        After updating, return to <a href="login.html">Log in</a>.
+      </div>
     </div>
   </div>
 
@@ -226,19 +188,6 @@
     }
   });
 
-  // Theme
-  const themeSel = document.getElementById("themeSel");
-  function setTheme(t){
-    document.documentElement.setAttribute("data-theme", t);
-    try{ localStorage.setItem("pp_theme", t); }catch(e){}
-  }
-  (function initTheme(){
-    const saved = localStorage.getItem("pp_theme") || "midnight";
-    setTheme(saved);
-    themeSel.value = saved;
-  })();
-  themeSel.addEventListener("change", ()=> setTheme(themeSel.value));
-
   const hint = document.getElementById("hint");
   const msg = document.getElementById("msg");
   const pw1 = document.getElementById("pw1");
@@ -246,58 +195,62 @@
   const saveBtn = document.getElementById("saveBtn");
 
   function setHint(text, kind=""){
-    hint.textContent = text || "—";
+    hint.textContent = text;
     hint.className = "hint" + (kind ? " " + kind : "");
   }
   function setMsg(text, kind=""){
     msg.textContent = text || "—";
     msg.className = "msg" + (kind ? " " + kind : "");
   }
+
   function canSubmit(){
     const a = (pw1.value || "").trim();
     const b = (pw2.value || "").trim();
     return a.length >= 8 && a === b;
   }
-  function refresh(){
-    saveBtn.disabled = !canSubmit();
-  }
 
-  function bindEye(btnId, inputEl){
+  function bindToggle(btnId, input){
     const btn = document.getElementById(btnId);
     btn.addEventListener("click", ()=>{
-      const isPw = inputEl.type === "password";
-      inputEl.type = isPw ? "text" : "password";
+      const isPw = input.type === "password";
+      input.type = isPw ? "text" : "password";
       btn.textContent = isPw ? "Hide" : "Show";
-      inputEl.focus();
+      input.focus();
     });
   }
-  bindEye("eye1", pw1);
-  bindEye("eye2", pw2);
+  bindToggle("toggle1", pw1);
+  bindToggle("toggle2", pw2);
 
-  [pw1, pw2].forEach(el => el.addEventListener("input", ()=>{
-    refresh();
-    if (!pw1.value || pw1.value.length < 8) setMsg("Password must be at least 8 characters.", "bad");
-    else if (pw1.value !== pw2.value) setMsg("Passwords must match.", "bad");
-    else setMsg("Looks good. Click “Update password”.", "ok");
-  }));
+  [pw1, pw2].forEach(el=>{
+    el.addEventListener("input", ()=>{
+      saveBtn.disabled = !canSubmit();
+      if (!pw1.value || pw1.value.length < 8) setMsg("Password must be at least 8 characters.", "bad");
+      else if (pw1.value !== pw2.value) setMsg("Passwords must match.", "bad");
+      else setMsg("Looks good. Click “Update password”.", "ok");
+    });
+  });
 
-  async function bootstrapRecovery(){
+  async function bootstrap(){
     try{
       const url = new URL(location.href);
       const code = url.searchParams.get("code");
 
+      // PKCE reset links often come with ?code=...
       if (code){
         const { error } = await supabase.auth.exchangeCodeForSession(code);
         if (error){
           console.error(error);
-          setHint("Reset link invalid/expired. Please request a new reset email.", "bad");
+          setHint("This reset link is invalid or expired. Please request a new reset link.", "bad");
+          setMsg("Invalid/expired link.", "bad");
           return false;
         }
-        setHint("Reset link verified. Choose a new password.", "ok");
+        setHint("Reset link verified. Please choose a new password.", "ok");
+        setMsg("Ready.", "");
+        saveBtn.disabled = !canSubmit();
         return true;
       }
 
-      // hash tokens fallback
+      // Older links: tokens in #hash
       const hash = location.hash || "";
       if (hash.includes("access_token=") && hash.includes("refresh_token=")){
         const params = new URLSearchParams(hash.replace(/^#/, ""));
@@ -307,52 +260,56 @@
           const { error } = await supabase.auth.setSession({ access_token, refresh_token });
           if (error){
             console.error(error);
-            setHint("Reset link invalid/expired. Please request a new reset email.", "bad");
+            setHint("This reset link is invalid or expired. Please request a new reset link.", "bad");
+            setMsg("Invalid/expired link.", "bad");
             return false;
           }
           history.replaceState(null, "", location.pathname + location.search);
-          setHint("Reset link verified. Choose a new password.", "ok");
+          setHint("Reset link verified. Please choose a new password.", "ok");
+          setMsg("Ready.", "");
+          saveBtn.disabled = !canSubmit();
           return true;
         }
       }
 
+      // Fallback: session already present
       const { data: { session } } = await supabase.auth.getSession();
       if (session?.user){
-        setHint("You’re signed in. You can set a new password now.", "ok");
+        setHint("You are signed in. You can set a new password now.", "ok");
+        setMsg("Ready.", "");
+        saveBtn.disabled = !canSubmit();
         return true;
       }
 
-      setHint("Missing reset session. Please request a new reset email.", "bad");
+      setHint("Missing reset session. Please request a new reset link.", "bad");
+      setMsg("No reset session detected.", "bad");
       return false;
-    }catch(e){
+    } catch(e){
       console.error(e);
-      setHint("Could not open reset session. Please request a new reset email.", "bad");
+      setHint("Something went wrong. Please request a new reset link.", "bad");
+      setMsg("Unexpected error.", "bad");
       return false;
     }
   }
 
-  const sessionOk = await bootstrapRecovery();
-  setMsg(sessionOk ? "Ready." : "—", sessionOk ? "" : "bad");
-  refresh();
+  const sessionOk = await bootstrap();
 
   saveBtn.addEventListener("click", async ()=>{
     if (!sessionOk){
-      setMsg("Reset link invalid/expired. Please request a new reset email.", "bad");
+      setMsg("This reset link is invalid or expired. Please request a new reset link.", "bad");
       return;
     }
+
     const a = (pw1.value || "").trim();
     const b = (pw2.value || "").trim();
-
     if (a.length < 8){ setMsg("Password must be at least 8 characters.", "bad"); return; }
     if (a !== b){ setMsg("Passwords must match.", "bad"); return; }
 
     saveBtn.disabled = true;
-    saveBtn.textContent = "Updating…";
-    setMsg("Updating password…");
+    setMsg("Updating…");
 
     const { error } = await supabase.auth.updateUser({ password: a });
 
-    saveBtn.textContent = "Update password";
     saveBtn.disabled = false;
 
     if (error){
@@ -362,8 +319,10 @@
     }
 
     setMsg("Password updated ✅ Redirecting to login…", "ok");
+
+    // Clean sign-in state so user logs in fresh
     await supabase.auth.signOut();
-    setTimeout(()=>location.replace("login.html"), 800);
+    setTimeout(()=> location.replace("login.html"), 900);
   });
 </script>
 </body>
